<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:freezesText="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="160dp"
        android:focusable="true"
        android:hint="@string/username" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/username"
        android:freezesText="true"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="50dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <CheckBox
        android:text="Remember me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showPassword"
        android:layout_alignLeft="@+id/showPassword"
        android:layout_alignStart="@+id/showPassword"
        android:id="@+id/rememberMe" />

    <CheckBox
        android:text="Show Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/showPassword"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/register"
        android:layout_width="170dp"
        android:layout_height="40dp"

        android:background="#3B4990"
        android:text="@string/create"
        android:textColor="#ffffff"
        android:layout_marginBottom="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignStart="@+id/submit" />

    <Button
        android:id="@+id/submit"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:background="#3B4990"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:layout_above="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/user"
        android:layout_below="@id/password"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </Spinner>


</RelativeLayout>